@@ -1858,3 +1858,6 @@ to Lars Grobe for help identifying this problem.
 Fixed bug in depth-of-field blur where view distance was measured from
 fore clipping plane rather than viewpoint.  Thanks to Peter A-B for
 pointing this out.
+
+Added options to dctimestep to allow multiple time steps (-n)
+and multiple output pictures or sensor files (-o).
